--- a/web/css/index.css
+++ b/web/css/index.css
@@ -65,3 +65,47 @@ main{
     max-width: 1200px;
     padding: 1rem;
 }
+
+section{
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 5px;
+}
+
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1rem;
+}
+
+.grid-item{
+    background-color: #fff;
+    padding: 8rem 1rem;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    transition: all 0.3s ease;
+}
+
+section .grid-container a{
+    color: #333;
+}
+
+.grid-item:hover{
+    background-color: #333;
+    color: #fff;
+}
+
+.grid-item h2{
+    font-size: 3rem;
+    margin: 0;
+}
+
+.grid-item i{
+    font-size: 8rem;
+    margin-bottom: 1rem;
+}
